--- a/index.html
+++ b/index.html
@@ -35,16 +35,44 @@
     <img src="./asets/Tesla 2.jpg" alt="tesla">
  </main>
 
- <section class='section-one'>
-    div
- </section>
-
+ <section class="section-one">
+    <div>
+        <span>Benefits</span>
+        <h2>Benefits when using
+            our services</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde pariatur accusamus quo modi totam dolorem. Perferendis eum </p>
+    </div>
+    <div>
+        <div>
+            <img src="./asets/many.png" alt="many">
+            <h3>Many Choices</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde pariatur accusamus quo modi totam dolorem. Perferendis</p>
+        </div>
+        <div>
+            <img src="./asets/fast.png" alt="fast">
+            <h3>Fast and On Time</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde pariatur accusamus quo modi totam dolorem. Perferendis</p>
+        </div>
+        <div>
+            <img src="./asets/afordable.png" alt="afordable">
+            <h3>Affordable Price</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde pariatur accusamus quo modi totam dolorem. Perferendis </p>
+        </div>
+    </div>
+ </section class="section-two">
+    
  <section>
-
+    <div>
+        <img src="./asets/1.jpg" alt="1">
+        <img src="./asets/2.jpg" alt="2">
+        <img src="./asets/3.jpg" alt="3">
+        <img src="./asets/4.jpg" alt="4">
+    </div>
  </section>
-
+<hr>
  <footer>
-
+    <img src="./asets/logo.png" alt="logo">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde pariatur accusamus quo modi totam dolorem.</p>
  </footer>
     
 </body>
