--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
  </main>
 
  <section class="section-one">
-    <div>
+    <div class="sec-one">
         <span>Benefits</span>
         <h2>Benefits when using
             our services</h2>
