--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <h1>Lorem ipsum dolor 
         sit amet consectetur</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde pariatur accusamus quo modi totam dolorem. Perferendis eum doloremque tenetur id obcaecati fugiat eius molestias exercitationem magnam aliquid, veniam delectus nihil totam dolore </p>
-    <img src="./asets/Tesla 2.jpg" alt="tesla">
+    <img class="tesla-small" src="./asets/Tesla 2.jpg" alt="tesla">
+    <img class="tesla-big" src="./asets/TeslaBig.jpg" alt="tesla">
  </main>
 
  <section class="section-one">
