--- a/index.html
+++ b/index.html
@@ -40,27 +40,35 @@
 
     <div class="sec-one">
         <span>Benefits</span>
-        <h2>Benefits when using
+        <div class="sec-one-info">
+            <h2>Benefits when using
             our services</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde pariatur accusamus quo modi totam dolorem. Perferendis eum </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde pariatur accusamus quo modi totam dolorem. Perferendis eum doloremque tenetur id obcaecati  </p>
+        </div>   
     </div>
 
     <div class="sec-one-cards">
 
         <div class="sec-one-items">
-            <img src="./asets/many.png" alt="many">
+            <div>
+                <img src="./asets/many.png" alt="many">
+            </div>
             <h3>Many Choices</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde pariatur accusamus quo modi totam dolorem. Perferendis</p>
         </div>
 
         <div class="sec-one-items">
-            <img src="./asets/fast.png" alt="fast">
+            <div>
+                <img src="./asets/fast.png" alt="fast">
+            </div>   
             <h3>Fast and On Time</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde pariatur accusamus quo modi totam dolorem. Perferendis</p>
         </div>
 
         <div class="sec-one-items">
-            <img src="./asets/afordable.png" alt="afordable">
+            <div>
+                <img src="./asets/afordable.png" alt="afordable">
+            </div>
             <h3>Affordable Price</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde pariatur accusamus quo modi totam dolorem. Perferendis </p>
         </div>
