--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
 
         <div class="icons">
             <img src="./src/bag.svg" alt="bag">
-            <img src="./src/user.svg" alt="user">
+            <a href="./signin.html">
+                <img src="./src/user.svg" alt="user">
+            </a>
         </div>
         <div id="menuBtn">
             <button>Menu</button>
