--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <nav>
             <a href="#">Product</a>
             <a href="#">Services</a>
-            <a href="#">Article</a>
+            <a href="./gallery.html">Gallery</a>
             <a href="#">About Us</a>
             <div class="dropdown">
                 <button class="dropbtn">Models</button>
