--- a/html/gallery.html
+++ b/html/gallery.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./src/tesla_logo_icon_169601.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../src/tesla_logo_icon_169601.png" type="image/x-icon">
 
     <title>Tesla | Gallery</title>
-    <link rel="stylesheet" href="gallery.css">
+    <link rel="stylesheet" href="../css/gallery.css">
 </head>
 <body>
     <div class="container">
@@ -16,6 +16,6 @@
 
         </div>
     </div>    
-    <script src="./gallery.js"></script>
+    <script src="../js/gallery.js"></script>
 </body>
 </html>
