--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./src/tesla_logo_icon_169601.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -47,7 +47,7 @@
         <nav>
             <a href="#">Product</a>
             <a href="#">Services</a>
-            <a href="./gallery.html">Gallery</a>
+            <a href="./html/gallery.html">Gallery</a>
             <a href="#">About Us</a>
             <div class="dropdown">
                 <button class="dropbtn">Models</button>
@@ -63,7 +63,7 @@
 
         <div class="icons">
             <img src="./src/bag.svg" alt="bag">
-            <a href="./signin.html">
+            <a href="./html/signin.html">
                 <img src="./src/user.svg" alt="user">
             </a>
         </div>
@@ -126,7 +126,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
 
