--- a/html/gallery.html
+++ b/html/gallery.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <div class="container">
+        <a class="logo" href="../index.html">
+            <img src="../src/logo.svg" alt="logo">
+        </a>
         <h1>Gallery</h1>
         <div class="teammembers">
 
