--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <img src="./src/close.svg" alt="close">
         </div>
         <ul class="menu-nav-items">
-          <li><a href="#">Trade-In</a></li>
+          <li><a href="./html/models.html">Models</a></li>
           <li><a href="#">Demo Drive</a></li>
           <li><a href="#">Insurance</a></li>
           <li><a href="#">Cybertruck</a></li>
