--- a/html/gallery.html
+++ b/html/gallery.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="../js/gallery.js"></script>
+    <script src="../js/overflow.js"></script>
+</head>
     <link rel="shortcut icon" href="../src/tesla_logo_icon_169601.png" type="image/x-icon">
 
     <title>Tesla | Gallery</title>
@@ -19,6 +23,5 @@
 
         </div>
     </div>    
-    <script src="../js/gallery.js"></script>
 </body>
 </html>
