--- a/html/gallery.html
+++ b/html/gallery.html
@@ -8,7 +8,7 @@
     <script src="../js/gallery.js"></script>
     <script src="../js/overflow.js"></script>
 </head>
-    <link rel="shortcut icon" href="../src/tesla_logo_icon_169601.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../src/favicon.png" type="image/x-icon">
 
     <title>Tesla | Gallery</title>
     <link rel="stylesheet" href="../css/gallery.css">
