--- a/html/signin.html
+++ b/html/signin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../src/tesla_logo_icon_169601.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../src/favicon.png" type="image/x-icon">
     <title>Tesla | Login</title>
     <link rel="stylesheet" href="../css/signin.css">
 </head>
