--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tesla | Home</title>
-    <link rel="shortcut icon" href="./src/tesla_logo_icon_169601.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="./css/style.css">
@@ -99,7 +99,7 @@
 
     <section class="video">
         <video autoplay muted loop id="myVideo">
-            <source src="./src/Homepage-Test_Drive-NA-Desktop.mp4" type="video/mp4">
+            <source src="./src/video.mp4" type="video/mp4">
         </video>
         <div class="video-info">
             <h2>Drive the Dream</h2>
