--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             <img src="./src/logo.svg" alt="logo">
         </div>
         <nav>
-            <a href="#">Product</a>
-            <a href="#">Services</a>
+            <a href="./html/default.html">Product</a>
+            <a href="./html/default.html">Services</a>
             <a href="./html/gallery.html">Gallery</a>
-            <a href="#">About Us</a>
+            <a href="./html/default.html">About Us</a>
             <div class="dropdown">
                 <button class="dropbtn">Models</button>
                 <div class="dropdown-content">
@@ -62,7 +62,9 @@
         </nav>
 
         <div class="icons">
-            <img src="./src/bag.svg" alt="bag">
+            <a href="./html/default.html">
+                <img src="./src/bag.svg" alt="bag">
+            </a>
             <a href="./html/signin.html">
                 <img src="./src/user.svg" alt="user">
             </a>
