--- a/html/default.html
+++ b/html/default.html
@@ -11,5 +11,8 @@
 <body>
     <img src="../src/tesla_mobile.gif" alt="gif">
     <h1>Under Construction</h1>
+    <a href="../index.html">
+        <img src="../src/logoWhite.svg" alt="logo">
+    </a>
 </body>
 </html>
