--- a/html/gallery.html
+++ b/html/gallery.html
@@ -21,6 +21,14 @@
         <div class="teammembers">
 
         </div>
-    </div>    
+    </div>
+    <footer>       
+        <div class="copyright">
+            <a href="#">Tesla © 2023</a>
+            <a href="#">Privacy & Legal</a>
+            <a href="#">Locations</a>
+            <a href="#">Recalls</a>
+        </div>
+    </footer>    
 </body>
 </html>
