--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <img src="./src/logo.svg" alt="logo">
         </div>
         <nav>
-            <a href="./html/default.html">Product</a>
+            <a href="./html/product.html">Product</a>
             <a href="./html/default.html">Services</a>
             <a href="./html/gallery.html">Gallery</a>
             <a href="./html/default.html">About Us</a>
