--- a/html/product.html
+++ b/html/product.html
@@ -19,102 +19,102 @@
     <div class="gallery">
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod15.jpg" alt="image 1" style="width: 1000px; height: 563px; object-fit: cover; ">
-            <p style="display: none;">image 1</p>
+            <p>Tesla Sipping Glasses</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod16.jpg" alt="image 2" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 2</p>
+            <p>Umbrella</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod17.jpg" alt="image 3" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 3</p>
+            <p>Wireless Portable Charger 2.0</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod18.jpg" alt="image 4" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 4</p>
+            <p>Cyberwhistle</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod19.jpg" alt="image 5" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 5</p>
+            <p>Giga Texas Belt Buckle</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod20.jpg" alt="image 5" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 6</p>
+            <p>Wireless Charging Platform</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod21.jpg" alt="image 5" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 7</p>
+            <p>image 7</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod22.jpg" alt="image 1" style="width: 1000px; height: 563px; object-fit: cover; ">
-            <p style="display: none;">image 1</p>
+            <p>Tesla Branding Iron</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod23.jpg" alt="image 2" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 2</p>
+            <p>On the Road Cup</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod24.jpg" alt="image 3" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 3</p>
+            <p>Mega [mini] Pack</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod25.jpg" alt="image 4" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 4</p>
+            <p>Mega [mini] Pack</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod26.jpg" alt="image 5" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 5</p>
+            <p>Mega [back] Pack</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod27.jpg" alt="image 5" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 6</p>
+            <p>Mega [back] Pack</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod28.jpg" alt="image 5" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 7</p>
+            <p>On the Road Tumbler</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod29.jpg" alt="image 5" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 7</p>
+            <p>On the Road Vessel</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod30.jpg" alt="image 5" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 7</p>
+            <p>Plaid Mug</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod31.jpg" alt="image 5" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 7</p>
+            <p>Desktop Supercharger</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod32.jpg" alt="image 5" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 7</p>
+            <p>S3XY Mug</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod34.jpg" alt="image 5" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 7</p>
+            <p>Wireless Portable Charger 2.0</p>
         </div>
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod35.jpg" alt="image 5" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p style="display: none;">image 7</p>
+            <p>Wireless Portable Charger 2.0</p>
         </div>
 
     </div>
