--- a/html/product.html
+++ b/html/product.html
@@ -49,7 +49,7 @@
 
         <div class="gallery-imagezero">
             <img class="gallery-image" src="../src/products/prod21.jpg" alt="image 5" style="width: 1000px; height: 563px; object-fit: cover;">
-            <p>image 7</p>
+            <p>Wireless Charging Platform</p>
         </div>
 
         <div class="gallery-imagezero">
