--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
             <img src="./src/tesla7.jpg" alt="7">
             <img src="./src/tesla8.jpg" alt="8">
             <img src="./src/tesla9.jpg" alt="9">
+            <img src="./src/products/prod8.jpg" alt="10">
+            <img src="./src/oig4.png" alt="11">
         </div>
         <div class="carousel"></div>
 
