--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li><a href="#">Commercial Energy</a></li>
           <li><a href="#">Utilities</a></li>
           <li><a href="#">Careers</a></li>
-          <li><a href="#">Find Us</a></li>
+          <li><a href="./html/contact.html">Contact Us</a></li>
           <li><a href="#">Events</a></li>
           <li><a href="#">Support</a></li>
         </ul>
