--- a/html/signin.html
+++ b/html/signin.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../src/favicon.png" type="image/x-icon">
     <title>Tesla | Login</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/signin.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="shortcut icon" href="../src/favicon.png" type="image/x-icon">
+
 </head>
 <body>
     <main>
@@ -17,9 +21,22 @@
             <h2>Sign In</h2>
             <div class="form-email">
                 <label for="email">Email Address</label>
-                <img src="../src/info.svg" alt="info">
+                <div class="form-email-popup">
+                    <img class="form-email-img" src="../src/info.svg" alt="info">
+                    <!-- popup -->
+                    <div class="popup">
+                        <p>If your account is linked to an email address you no longer have access to, please sign into your account and update your email address under account settings.</p>
+                        <p class="popup-text2">If you have trouble signing in, please visit our <a href="#">support page</a>.</p>
+                    </div>
+                </div>
             </div>
             <input type="email" name="email" id="email">
+            <label for="password">Password</label>
+            <div>
+                <input type="password" name="password" id="password">
+                <span><i class="bi bi-eye" id="showPassword"></i>
+                </span>
+            </div>
             <button class="form-continue">Continue</button>
             <div class="form-forget">
                 <a href="#">Forgot email?</a>
@@ -31,7 +48,7 @@
                 <span>OR</span>
                 <div></div>
             </div>
-            <button class="form-create">Create Account</button>
+            <button class="form-create">Create Account</button>          
         </form>
     </main>
     <footer>       
@@ -42,5 +59,6 @@
             <a href="#">Recalls</a>
         </div>
     </footer>
+    <script src="../js/signin.js"></script>
 </body>
 </html>
