--- a/html/signin.html
+++ b/html/signin.html
@@ -48,7 +48,7 @@
                 <span>OR</span>
                 <div></div>
             </div>
-            <button class="form-create">Create Account</button>          
+            <a href="../html/registration.html" class="form-create">Create Account</a>          
         </form>
     </main>
     <footer>       
