--- a/html/registration.html
+++ b/html/registration.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tesla | Contact us</title>
+    <title>Tesla | Create Account</title>
     <link rel="shortcut icon" href="../src/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/registration.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
