--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
             <img src="./src/tesla9.jpg" alt="9">
             <img src="./src/products/prod8.jpg" alt="10">
             <img src="./src/oig4.png" alt="11">
+            <img src="./src/cyber1.jpg" alt="12">
+            <img src="./src/cyber2.jpg" alt="13">
+            <img src="./src/cyber3.jpg" alt="14">
+            <img src="./src/cyber4.jpg" alt="15">
+            <img src="./src/cyber5.jpg" alt="16">
+            <img src="./src/cyber6.jpg" alt="17">
         </div>
         <div class="carousel"></div>
 
