--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <nav>
             <a href="./html/product.html">Product</a>
-            <a href="./html/default.html">Services</a>
+            <a href="./html/services.html">Services</a>
             <a href="./html/gallery.html">Gallery</a>
             <a href="./html/default.html">About Us</a>
             <div class="dropdown">
