--- a/html/contact.html
+++ b/html/contact.html
@@ -50,21 +50,22 @@
             <div class="adreses">
                 <div>
                     <h5>Tesla Headquarters - Gigafactory Texas</h5>
-                    <p>1 Tesla Road</p>
-                    <p>Austin, TX 78725</p>
+                    <p class="text1"><img class="location" src="../src/location.svg" alt="location">
+                        1 Tesla Road</p>
+                    <p class="text2">Austin, TX 78725</p>
                     <a href="#">Directions</a>    
                 </div>
 
                 <div>
                     <h5>Tesla Engineering Headquarters</h5>
-                    <p>1501 Page Mill Road</p>
-                    <p>Palo Alto, CA 94304</p>
+                    <p class="text1"><img class="location" src="../src/location.svg" alt="location">1501 Page Mill Road</p>
+                    <p class="text2">Palo Alto, CA 94304</p>
                     <a href="#">Directions</a>    
                 </div>
                 
                 <div>
                     <h5>Tesla Factory</h5>
-                    <p>45500 Fremont Boulevard Fremont, CA 94538</p>
+                    <p class="text1"><img class="location" src="../src/location.svg" alt="location">45500 Fremont Boulevard Fremont, CA 94538</p>
                     <a href="#">Directions</a>    
                 </div>            
             </div>
