--- a/html/contact.html
+++ b/html/contact.html
@@ -46,7 +46,7 @@
 
 
           <div class="col">
-            <h3>Our Adresses</h3>
+            <h3>Our Addresses</h3>
             <div class="adreses">
                 <div>
                     <h5>Tesla Headquarters - Gigafactory Texas</h5>
