--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a href="./html/product.html">Product</a>
             <a href="./html/services.html">Services</a>
             <a href="./html/gallery.html">Gallery</a>
-            <a href="./html/default.html">About Us</a>
+            <a href="./html/aboutus.html">About Us</a>
             <div class="dropdown">
                 <button class="dropbtn">Models</button>
                 <div class="dropdown-content">
