--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -404,6 +404,16 @@
     </div>
 </footer>
 
+<!-- scroll to top button -->
+<button
+        type="button"
+        class="btn btn-secondary btn-floating btn-lg rounded-pill"
+        id="btn-back-to-top"
+        >
+        <i class="bi bi-box-arrow-up"></i>
+        On Top
+</button>
+
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   <script src="../js/aboutus.js"></script>
