--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -405,13 +405,8 @@
 </footer>
 
 <!-- scroll to top button -->
-<button
-        type="button"
-        class="btn btn-secondary btn-floating btn-lg rounded-pill"
-        id="btn-back-to-top"
-        >
-        <i class="bi bi-box-arrow-up"></i>
-        On Top
+<button type="button" class="btn btn-secondary btn-floating btn-lg rounded-pill" id="btn-back-to-top">
+        <i class="bi bi-box-arrow-up"></i>On Top
 </button>
 
   
