--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -233,10 +233,10 @@
   </section>
 
   <!-- Section reviews -->
-  <section id="reviews" class="bg-altlight">
+  <section id="reviews">
     <div class="container-lg">
       <div class="text-center">
-        <h2><i class="bi bi-stars text-altdark"></i>Reviews</h2>
+        <h2><i class="bi bi-stars text-dark"></i>Reviews</h2>
         <p class="lead">What customers have said about the Tesla...</p>
       </div>
 
@@ -245,11 +245,11 @@
           <div class="list-group">
             <div class="list-group-item py-3">
               <div class="pb-2">
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
               </div>
               <h5 class="mb-1 fw-bold">Terms and Conditions</h5>
               <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error veniam sit expedita est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore praesentium voluptate repellat in id quisquam.</p>
@@ -257,11 +257,11 @@
             </div>
             <div class="list-group-item py-3">
               <div class="pb-2">
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
               </div>
               <h5 class="mb-1 fw-bold">Product Inquiries</h5>
               <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error veniam sit expedita est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore praesentium voluptate repellat in id quisquam.</p>
@@ -269,11 +269,11 @@
             </div>
             <div class="list-group-item py-3">
               <div class="pb-2">
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-half text-altdark"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
               </div>
               <h5 class="mb-1 fw-bold">Payment, Checkout and Pricing</h5>
               <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error veniam sit expedita est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore praesentium voluptate repellat in id quisquam.</p>
@@ -281,11 +281,11 @@
             </div>
             <div class="list-group-item py-3">
               <div class="pb-2">
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
               </div>
               <h5 class="mb-1 fw-bold">Tesla Gift Cards</h5>
               <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error veniam sit expedita est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore praesentium voluptate repellat in id quisquam.</p>
@@ -293,11 +293,11 @@
             </div>
             <div class="list-group-item py-3">
               <div class="pb-2">
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-half text-altdark"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
+                <i class="bi bi-star text-warning"></i>
               </div>
               <h5 class="mb-1 fw-bold">Returns and Cancellations</h5>
               <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error veniam sit expedita est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore praesentium voluptate repellat in id quisquam.</p>
