--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -80,6 +80,7 @@
       </div>
 
       <div class="row my-5 g-3 align-items-center justify-content-center">
+        <!-- ------------ -->
         <div class="col-8 col-lg-4 col-xl-3">
           <div class="card border-0">
             <div class="card-body text-center py-4">
@@ -93,22 +94,43 @@
             </div>
           </div>
         </div>
-
-        <div class="col-9 col-lg-4">
-          <div class="card border-secondary border-2">
-            <div class="card-header text-center text-secondary">Most Popular</div>
-            <div class="card-body text-center py-5">
-              <h4 class="card-title">Complete Edition</h4>
-              <p class="lead card-subtitle">demo drive one day only</p>
-              <p class="display-4 my-4 text-secondary fw-bold">$18.99</p>
-              <p class="card-text mx-5 text-muted d-none d-lg-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, vitae magni! Repellat commodi a fuga corporis saepe dolorum.</p>
-              <a href="#" class="btn btn-outline-secondary btn-lg mt-3">
-                Buy Now
-              </a>
+      <!-- ----------------------------------------------- -->
+      <div class="col-9 col-lg-4">
+        <div class="flip-card" onclick="flipcard(this)">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <div class="card border-secondary border-2">
+                        <div class="card-header text-center text-secondary">Most Popular</div>
+                        <div class="card-body text-center py-5">
+                          <h4 class="card-title">Complete Edition</h4>
+                          <p class="lead card-subtitle">demo drive one day only</p>
+                          <p class="display-4 my-4 text-secondary fw-bold">$18.99</p>
+                          <p class="card-text mx-5 text-muted d-none d-lg-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, vitae magni! Repellat commodi a fuga corporis saepe dolorum.</p>
+                          <a href="#" class="btn btn-outline-secondary btn-lg mt-3">
+                            Buy Now
+                          </a>
+                        </div>
+                      </div>
+                </div>
+                <div class="flip-card-back">
+                    <div class="card border-secondary border-2">
+                        <div class="card-header text-center text-secondary">Most Popular</div>
+                        <div class="card-body text-center py-5">
+                          <h4 class="card-title">Complete Edition</h4>
+                          <p class="lead card-subtitle">demo drive one day only</p>
+                          <p class="display-4 my-4 text-secondary fw-bold">$188.99</p>
+                          <p class="card-text mx-5 text-muted d-none d-lg-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, vitae magni! Repellat commodi a fuga corporis saepe dolorum.</p>
+                          <a href="#" class="btn btn-outline-secondary btn-lg mt-3">
+                            Buy Now
+                          </a>
+                        </div>
+                      </div>
+                </div>
             </div>
-          </div>
         </div>
-
+        </div>
+        <!-- ------------------------------------------- -->
+    
         <div class="col-8 col-lg-4 col-xl-3">
           <div class="card border-0">
             <div class="card-body text-center py-4">
@@ -122,8 +144,9 @@
             </div>
           </div>
         </div>
-      </div>
-
+        <!-- --------------------------- -->
+    
+        </div>
     </div>
   </section>
 
@@ -409,8 +432,9 @@
         <i class="bi bi-box-arrow-up"></i> On Top
 </button>
 
-  
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   <script src="../js/aboutus.js"></script>
+  <script src="../js/aboutus3d.js"></script>
 </body>
 </html>
