--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -85,7 +85,7 @@
           <div class="card border-0">
             <div class="card-body text-center py-4">
               <h4 class="card-title">Starter Edition</h4>
-              <p class="lead card-subtitle">demo drive one hour only</p>
+              <p class="lead card-subtitle">Demo drive one hour only</p>
               <p class="display-5 my-4 text-secondary fw-bold">$12.99</p>
               <p class="card-text mx-5 text-muted d-none d-lg-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, vitae magni! Repellat commodi a fuga corporis saepe dolorum.</p>
               <a href="#" class="btn btn-outline-secondary btn-lg mt-3">
@@ -116,7 +116,6 @@
                     <div class="card border-secondary border-2">
                         <div class="card-header text-center text-secondary">Cybertruck</div>
                         <div class="card-body text-center py-5 bg-dark" >
-                          <!-- <h4 class="card-title text-light">Complete Edition</h4> -->
                           <img src="../src/cyberwt.avif" alt="cyber" width="250" height="100">
                           <p class="lead card-subtitle text-light">Demo drive one day only</p>
                           <p class="display-4 my-4 text-light fw-bold">$188.99</p>
