--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -41,7 +41,7 @@
           <li class="nav-item d-md-none">
             <a class="nav-link" href="#pricing">Pricing</a>
           </li>
-          <li class="nav-item ms-2 d-none d-md-inline">
+          <li class="nav-item ms-2 d-none d-md-inline" id="buyBtn">
             <a class="btn btn-secondary" href="#pricing">buy now</a>
           </li>          
         </ul>
@@ -61,7 +61,7 @@
             <div class="display-5 text-muted">Your Driving Skills</div>
           </h1>
           <p class="lead my-4 text-muted">Apparel, lifestyle, charging equipment, vehicle parts and most vehicle accessories will ship directly to the address entered at time of checkout.</p>
-          <a href="#pricing" class="btn btn-secondary btn-lg">Buy Now</a>         
+          <a href="#pricing" class="btn btn-secondary btn-lg" id="buyBtn2">Buy Now</a>         
         </div>
 
         <div class="col-md-5 text-center d-none d-md-block">
